wallet_core/wallet_common/wallet_common_macros/tests/derive_error_category/fail_on_invalid_defer.stderr
error[E0277]: the trait bound `std::io::Error: ErrorCategory` is not satisfied
 --> tests/derive_error_category/fail_on_invalid_defer.rs:1:10
  |
1 | #[derive(wallet_common_macros::ErrorCategory)]
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `ErrorCategory` is not implemented for `std::io::Error`
  |
  = help: the trait `ErrorCategory` is implemented for `Error`
  = note: this error originates in the derive macro `wallet_common_macros::ErrorCategory` (in Nightly builds, run with -Z macro-backtrace for more info)
